--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <p style="font-size: 10px;">比如没买什么东西什么的(小声嘀咕)</p>
         <h1>如果你有微信账号并且也想和我们元旦聊到12点</h1>
         <h2>学校下课可以找我或者微信私信我</h2>
-        <a href="https://github.com/ThereAreNoNamesHere/ThereAreNoNamesHere.github.io/issues" style="font-size:30px">这个页面有什么Bug也可以来github找我哈</a>
+        <a href="https://github.com/ThereAreNoNamesHere/ThereAreNoNamesHere.github.io/issues" style="font-size:30px">这个页面有什么Bug也可以来Github找我哈</a>
     </body>
 </html>
