--- a/About_Group/index.html
+++ b/About_Group/index.html
@@ -1,28 +1,7 @@
 <!DOCTYPE html>
-<head>
-    <meta charset="utf-8">
-    <style>
-    </style>
-    <title>群规</title>
-</head>
-<body>
-    <div>
-        <h2>第一节：关于群规</h2>
-        <p>&ensp;&ensp;1.本群规为群主和群管理员统一编写，不得由他人任意更改，群内所有人员在群规未更改时必须遵守群规，请耐心阅读并牢记在心。</p>
-        <p>&ensp;&ensp;2.您可以对该群规提出意见或建议，但不保证您的意见能够顺利通过并达到修改群规的目的。</p>
-        <h2>第二节：群规</h2>
-        <p>&ensp;&ensp;1.由于老师不允许学生中存在聊天群，因此严禁所有人在学校讨论有关本群中除第三方内容（包括但不限于视频号、bilibili、网络梗）以外所有内容。</p>
-        <p>&ensp;&ensp;2.为建立良好的聊天氛围，禁止传播有关色情、暴力、血腥、谣言、诋毁他人、违反常人三观（指道法书所传递的三观）以及违反法律的内容，严禁发生争执和吵架、互怼等行为。</p>
-        <p>&ensp;&ensp;3.工作日在晚上6点至9点可讨论与学习有关内容；法定节假日7点30分至9点可自由聊天，但不得违反第二节第2条之规定。</p>
-        <p>&ensp;&ensp;4.本群群主为葛昱阳（网名orange），管理员为梅昕玥（网名随风逐波），如需邀请其他人进群，请私信本人和梅昕玥（以下简称“群管理员”）并注明人员名称。</p>
-        <p>&ensp;&ensp;5.本群不得邀请除六（3）班同学以外的人加入。</p>
-        <p>&ensp;&ensp;6.禁止表情包刷屏，刷屏指单个同学连发8个以上表情包，包括发完后撤回。</p>
-        <p>&ensp;&ensp;7.入群后请将自己的名字改成“姓名+学号”的格式</p>
-        <h2>第三节：处罚</h2>
-        <p>&ensp;&ensp;1.机会：每月有两次，如机会≤0，踢出群聊。</p>
-        <p>&ensp;&ensp;2.踢出群聊：踢出后5天拉回，只得由群管理员拉回，若私自拉回，扣除1次机会。</p>
-        <p>&ensp;&ensp;3.扣除机会：违反第二节中除第1条和第5条以外所有规定，扣除1次机会。</p>
-        <p>&ensp;&ensp;4.永不拉回：违反第二节第1条和第5条规定者，踢出群聊，永不拉回，</p>
-        <p>&ensp;&ensp;5.争吵：关于多次引发矛盾均未解决者：前两次扣除机会，第三次按上一条的永不拉回规定处理。如果解决矛盾，则不扣除机会，不予处罚。</p>
-    </div>
-</body>
+<html>
+    <head>
+        <title>六(3)班 班级群</title>
+        <meta charset="utf-8">
+    </head>
+</html>
