--- a/About_Group/index.html
+++ b/About_Group/index.html
@@ -3,5 +3,10 @@
     <head>
         <title>六(3)班 班级群</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="css/index.css">
     </head>
+    <body>
+        <div><h1 id="title">欢迎来到&ensp;六(3)班&ensp;班级群&ensp;网站</h1></div>
+        <a id="rule" href="rule.html" target="_blank">点击查看群规</a>
+    </body>
 </html>
